# autonomous_exploration_development_environment

./: .gitignore  README.md
src/FAST_LIO/config/: velodyne.yaml  velodyne_sim.yaml
src/FAST_LIO/launch/: mapping_velodyne_sim.launch
src/husky/husky_control/launch/: control.launch
src/husky/husky_gazebo/launch/: husky_garage.launch  husky_playpen.launch  multi_husky_playpen2.launch  spawn_husky.launch
src/loam_interface/src/: loamInterface.cpp
src/local_planner/: CMakeLists.txt
src/local_planner/launch/: local_planner.launch  local_planner2.launch  local_planner3.launch
src/local_planner/launch/multi_robot/: local_planner1.launch  local_planner2.launch
src/local_planner/src/: localPlanner2.cpp  pathFollower2.cpp  remapTwist.cpp
src/local_planner/src/multi_robot/: localPlanner2.cpp  pathFollower2.cpp
src/sensor_scan_generation/: CMakeLists.txt
src/sensor_scan_generation/launch/: sensor_scan_generation2.launch
src/sensor_scan_generation/launch/multi_robot/: sensor_scan_generation1.launch
src/sensor_scan_generation/src/: sensorScanGeneration2.cpp
src/sensor_scan_generation/src/multi_robot/: sensorScanGeneration2.cpp
src/terrain_analysis/: CMakeLists.txt
src/terrain_analysis/launch/: terrain_analysis.launch  terrain_analysis2.launch
src/terrain_analysis/launch/multi_robot/: terrain_analysis1.launch  terrain_analysis2.launch
src/terrain_analysis/src/: terrainAnalysis2.cpp
src/terrain_analysis/src/multi_robot/: terrainAnalysis2.cpp
src/terrain_analysis_ext/: CMakeLists.txt
src/terrain_analysis_ext/launch/multi_robot/: terrain_analysis_ext1.launch  terrain_analysis_ext2.launch
src/terrain_analysis_ext/src/: terrainAnalysisExt2.cpp
src/terrain_analysis_ext/src/multi_robot/: terrainAnalysisExt2.cpp
src/vehicle_simulator/: CMakeLists.txt
src/vehicle_simulator/launch/: little_robot_example.launch  system_garage.launch  system_garage_multi_robot.launch  system_real_robot.launch  system_virtual_robot.launch  vehicle_simulator.launch
src/vehicle_simulator/launch/add/: little_robot_1.launch  little_robot_2.launch  vehicle_simulator_robot1.launch  vehicle_simulator_robot2.launch
src/vehicle_simulator/rviz/: vehicle_simulator.rviz
src/vehicle_simulator/src/: vehicleSimulator2.cpp  vehicleSimulator3.cpp
src/vehicle_simulator/urdf/: lidar.urdf.xacro  little_robot.urdf.xacro  robot.urdf.xacro
src/vehicle_simulator/world/: garage.world
src/visualization_tools/: CMakeLists.txt
src/visualization_tools/launch/: visualization_tools.launch
src/visualization_tools/src/: visualizationTools.cpp
src/waypoint2_rviz_plugin/: CMakeLists.txt  package.xml  plugin_description.xml
src/waypoint2_rviz_plugin/include/: waypoint_tool2.h
src/waypoint2_rviz_plugin/src/: waypoint_tool.cpp  waypoint_tool2.cpp
src/waypoint_example/src/: waypointExample.cpp
(+10 files in other folders)
